--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,13 @@
 --- #YAML:1.0
 name:                Data-ChipsChallenge
-version:             0.01
+version:             1.0.0
 abstract:            Perl interface to Chip's Challenge data files.
-license:             ~
-author:              
-    - Casey Kirsle <kirsle@cpan.org>
+license:             MIT
+author:
+    - Noah Petherbridge <kirsle@cpan.org>
 generated_by:        ExtUtils::MakeMaker version 6.42
 distribution_type:   module
-requires:     
+requires:
 meta-spec:
     url:     http://module-build.sourceforge.net/META-spec-v1.3.html
     version: 1.3
